# imu-ros-drivers

lsm303dlhc_ros/l3g/: adafruit_l3g.py
lsm303dlhc_ros/scripts/: imu_data_publisher.py
ros-imu-lsm303/: CMakeLists.txt  package.xml
ros-imu-lsm303/config/: test.yaml  test_webcam.yaml
ros-imu-lsm303/launch/: imu_node.launch
ros-imu-lsm303/src/: imu_node.cpp
ros-imu-lsm303/src/CAM/: config.cpp  config.h  of_cam_node.cpp  v4l2_camera.cpp  v4l2_camera.hpp  v4l2_camera_device.cpp  v4l2_camera_device.hpp
ros-imu-lsm303/src/IMU/: DCM.h  IMU.cpp  L3G.cpp  LSM303.cpp
